--- a/school_management/views/school_views.xml
+++ b/school_management/views/school_views.xml
@@ -23,9 +23,10 @@
                                          <div class="oe_kanban_card_content">
                                             <field name="standard_division"/>                                 
                                         </div> 
-                                         <div class="oe_kanban_card_content">
+                                        <div class="oe_kanban_card_content">
                                             <field name="class_teacher_id"/>                                 
                                         </div> 
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -58,10 +59,7 @@
                 </graph>
             </field>
         </record>
-
-
-
-        
+    
           <!-- Tree View -->
         <record model="ir.ui.view" id="view_school_management_tree">
             <field name="name">school.tree.view</field>
@@ -108,11 +106,12 @@
                                         <group>
                                             <field name="progress_bar" widget="progressbar"/>
                                             <field name="name"/>
-                                            
+                                        
                                             <field name="standard_division"/>                        
                                             <field name="roll_number"/>
-                                            <field name="division_id" no_create='1'/>
+                                            <field name="division_id" no_create='1' context="{'is_division':True}"/>
                                             <field name="status"/>
+                                          
                                         </group>
                                     </div>
                                     <div style="margin-right: 20px;">
@@ -123,6 +122,7 @@
                                             <field name="class_teacher_id"/>
                                             <field name="fee_detail"/>
                                             <field name="active"/>
+                                         
                                         </group>
                                     </div>
                                     <div>
@@ -153,6 +153,14 @@
                                         <group>
                                             <group>
                                                 <field name="previous_school_ids" />
+                                            </group> 
+                                        </group>
+                                    </page>
+
+                                    <page string="Extra Curricular Activity" name="extracurricular_activity">
+                                        <group>
+                                            <group>
+                                                <field name="extracurricular_activity_ids"  widget="many2many_tags" options="{'color_field': 'color'}"/>
                                             </group> 
                                         </group>
                                     </page>
