--- a/your_company/views/yh_employees.xml
+++ b/your_company/views/yh_employees.xml
@@ -16,6 +16,7 @@
                             <field name="country_id"/>
                             <field name="state_id"/>
                             <field name="description"/>
+                            <field name="email"/>
                         </group>
                     </sheet>
                 </form>
@@ -29,6 +30,7 @@
                 <tree string="Employees">
                     <field name="employee_name"/>
                     <field name="phone_number"/>
+                    <field name="email"/>
                     <field name="experience"/>
                     <field name="country_id"/>
                     <field name="state_id"/>
@@ -54,7 +56,7 @@
 
         <!-- Root Menu -->
         <menuitem id="yh_root_menu"
-        name="Your Home"
+        name="Company Employees"
         sequence="85"
         parent="website.menu_website_configuration"/>
 
